<resources>
    <string name="app_name">虎扑足球</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="in_news">国际足球</string>
    <string name="en_news">英超</string>
    <string name="sp_news">西甲</string>
    <string name="ge_news">德甲</string>
    <string name="it_news">意甲</string>
    <string name="cn_news">中超</string>
    <string name="football_bbs">足球话题区</string>
    <string name="club_bbs">俱乐部专区</string>
    <string name="bbs">论坛</string>
    <string name="bxj_bbs">步行街</string>
    <string name="news">新闻</string>
    <string name="main_toast">已回到主界面</string>
    <string name="Functions">功能</string>
    <string name="app_update">检查更新</string>
    <string name="app_about">关于软件</string>
    <string name="app_exit">退出</string>
    <string name="bbs_about">最足球的世界</string>
    <string name="app_about_content">虎扑足球APP是为了帮助用户在访问虎扑足球时，拥有更友好的用户体验。在您使用的过程中，如遇到任何问题，请发邮件给我，非常感谢您的使用！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_email">邮箱：liu.weiqiang@foxmail.com</string>
    <string name="error_txt">网络异常，请检查网络是否连接，然后重试。</string>
    <string name="error_replay">重试</string>


</resources>
