<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myapp.alex.com.footballapplication.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="V:1.0"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_about_content"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_email"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>


</FrameLayout>
